--- a/midterm.ipynb
+++ b/midterm.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "## Analytic Programming\n",
     "\n",
-    "> Midterm A: Analytic Programming, NTU, Spring, 2021.\n",
+    "> Midterm B: Analytic Programming, NTU, Spring, 2021.\n",
     "\n",
     "Kuo, Yao-Jen <yaojenkuo@ntu.edu.tw> from [DATAINPOINT](https://www.datainpoint.com)"
    ]
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 01. Define a function named `extract_head_coaches` that is able to extract head coaches from `coaches.json`.\n",
+    "## 01. Define a function named `extract_assistant_coaches` that is able to extract head coaches from `coaches.json`.\n",
     "\n",
     "- Expected inputs: a file `coaches.json`.\n",
     "- Expected outputs: a dictionary."
@@ -100,19 +100,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_head_coaches(coaches_json):\n",
+    "def extract_assistant_coaches(coaches_json):\n",
     "    \"\"\"\n",
-    "    >>> head_coaches = extract_head_coaches('coaches.json')\n",
-    "    >>> type(head_coaches)\n",
+    "    >>> assistant_coaches = extract_assistant_coaches('coaches.json')\n",
+    "    >>> type(assistant_coaches)\n",
     "    dict\n",
-    "    >>> len(head_coaches)\n",
+    "    >>> len(assistant_coaches)\n",
     "    30\n",
-    "    >>> head_coaches['PHI']\n",
-    "    'Doc Rivers'\n",
-    "    >>> head_coaches['BKN']\n",
-    "    'Steve Nash'\n",
-    "    >>> head_coaches['SAS']\n",
-    "    'Gregg Popovich'\n",
+    "    >>> assistant_coaches['PHI']\n",
+    "    ['David Joerger',\n",
+    "     'Sam Cassell',\n",
+    "     'Dan Burke',\n",
+    "     'Popeye Jones',\n",
+    "     'Ronald Jones',\n",
+    "     'Eric Hughes',\n",
+    "     'Brian Adams',\n",
+    "     'Kevin Johnson']\n",
+    "    >>> assistant_coaches['BKN']\n",
+    "    ['Jacque Vaughn',\n",
+    "     \"Mike D'Antoni\",\n",
+    "     'Ime Udoka',\n",
+    "     'Adam Harrington',\n",
+    "     'Jordan Ott',\n",
+    "     'Tiago Splitter',\n",
+    "     'Royal Ivey',\n",
+    "     'Ryan Forehan-Kelly',\n",
+    "     'Sebastien Poirier',\n",
+    "     'Dan Liburd']\n",
+    "    >>> assistant_coaches['SAS']\n",
+    "    ['Becky Hammon',\n",
+    "     'Will Hardy',\n",
+    "     'Mitch Johnson',\n",
+    "     'Chip Engelland',\n",
+    "     'Darius Songaila',\n",
+    "     'Will Sevening']\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
     "    \n",
@@ -123,9 +144,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 02. Define a function named `find_tallest_shortest_players` that is able to find the tallest and the shortest NBA players from `players.json`.\n",
+    "## 02. Define a function named `find_heaviest_lightest_players` that is able to find the heaviest and the lightest NBA players from `players.json`.\n",
     "\n",
-    "PS Skip those players whose `heightMeters` is an empty string.\n",
+    "PS Skip those players whose `weightKilograms` is an empty string.\n",
     "\n",
     "- Expected inputs: a file `players.json`.\n",
     "- Expected outputs: a dictionary."
@@ -137,19 +158,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_tallest_shortest_players(players_json):\n",
+    "def find_heaviest_lightest_players(players_json):\n",
     "    \"\"\"\n",
-    "    >>> tallest_shortest_players = find_tallest_shortest_players('players.json')\n",
-    "    >>> type(tallest_shortest_players)\n",
+    "    >>> heaviest_lightest_players = find_heaviest_lightest_players('players.json')\n",
+    "    >>> type(heaviest_lightest_players)\n",
     "    dict\n",
-    "    >>> tallest_shortest_players['tallest']['heightMeters']\n",
-    "    2.26\n",
-    "    >>> tallest_shortest_players['tallest']['players']\n",
+    "    >>> heaviest_lightest_players['heaviest']['weightKilograms']\n",
+    "    141.1\n",
+    "    >>> heaviest_lightest_players['heaviest']['players']\n",
     "    ['Tacko Fall']\n",
-    "    >>> tallest_shortest_players['shortest']['heightMeters']\n",
-    "    1.78\n",
-    "    >>> tallest_shortest_players['shortest']['players']\n",
-    "    ['Facundo Campazzo', 'Jared Harper', 'Markus Howard', 'Tremont Waters']\n",
+    "    >>> heaviest_lightest_players['lightest']['weightKilograms']\n",
+    "    72.6\n",
+    "    >>> heaviest_lightest_players['lightest']['players']\n",
+    "    ['Tyrell Terry']\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
     "    \n",
@@ -160,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 03. Define a function named `find_lakers_nets_players`  that is able to find the players who played for the Los Angeles Lakers and the Brooklyn Nets from `players.json` and `teams.json`.\n",
+    "## 03. Define a function named `find_nuggets_sixers_players`  that is able to find the players who played for the Denver Nuggets and the Philadelphia 76ers from `players.json` and `teams.json`.\n",
     "\n",
     "- Expected inputs: two files `players.json` and `teams.json`.\n",
     "- Expected outputs: a dictionary."
@@ -172,23 +193,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_lakers_nets_players(players_json, teams_json):\n",
+    "def find_nuggets_sixers_players(players_json, teams_json):\n",
     "    \"\"\"\n",
-    "    >>> lakers_nets_players = find_lakers_nets_players('players.json', 'teams.json')\n",
-    "    >>> type(lakers_nets_players)\n",
+    "    >>> nuggets_sixers_players = find_nuggets_sixers_players('players.json', 'teams.json')\n",
+    "    >>> type(nuggets_sixers_players)\n",
     "    dict\n",
-    "    >>> len(lakers_nets_players['Los Angeles Lakers'])\n",
+    "    >>> len(nuggets_sixers_players['Denver Nuggets'])\n",
     "    17\n",
-    "    >>> len(lakers_nets_players['Brooklyn Nets'])\n",
+    "    >>> len(nuggets_sixers_players['Philadelphia 76ers'])\n",
     "    17\n",
-    "    >>> lakers_nets_players['Los Angeles Lakers'][0]\n",
-    "    'Kostas Antetokounmpo'\n",
-    "    >>> lakers_nets_players['Los Angeles Lakers'][1]\n",
-    "    'Devontae Cacok'\n",
-    "    >>> lakers_nets_players['Brooklyn Nets'][0]\n",
-    "    'LaMarcus Aldridge'\n",
-    "    >>> lakers_nets_players['Brooklyn Nets'][1]\n",
-    "    'Bruce Brown'\n",
+    "    >>> nuggets_sixers_players['Denver Nuggets'][0]\n",
+    "    'Will Barton'\n",
+    "    >>> nuggets_sixers_players['Denver Nuggets'][1]\n",
+    "    'Bol Bol'\n",
+    "    >>> nuggets_sixers_players['Philadelphia 76ers'][0]\n",
+    "    'Seth Curry'\n",
+    "    >>> nuggets_sixers_players['Philadelphia 76ers'][1]\n",
+    "    'Joel Embiid'\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
     "    \n",
@@ -199,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 04. Define a function named `find_nets_coaches_players`  that is able to find the coaches and players of the Brooklyn Nets from `coaches.json`, `players.json`, and `teams.json`.\n",
+    "## 04. Define a function named `find_lakers_coaches_players`  that is able to find the coaches and players of the Los Angeles Lakers from `coaches.json`, `players.json`, and `teams.json`.\n",
     "\n",
     "- Expected inputs: three files `coaches.json`, `players.json`, and `teams.json`.\n",
     "- Expected outputs: a dictionary."
@@ -211,21 +232,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_nets_coaches_players(coaches_json, players_json, teams_json):\n",
+    "def find_lakers_coaches_players(coaches_json, players_json, teams_json):\n",
     "    \"\"\"\n",
-    "    >>> nets_coaches_players = find_nets_coaches_players('coaches.json', 'players.json', 'teams.json')\n",
-    "    >>> type(nets_coaches_players)\n",
+    "    >>> lakers_coaches_players = find_lakers_coaches_players('coaches.json', 'players.json', 'teams.json')\n",
+    "    >>> type(lakers_coaches_players)\n",
     "    dict\n",
-    "    >>> nets_coaches_players['headCoach']\n",
-    "    'Steve Nash'\n",
-    "    >>> len(nets_coaches_players['assistantCoaches'])\n",
-    "    10\n",
-    "    >>> len(nets_coaches_players['players'])\n",
+    "    >>> lakers_coaches_players['headCoach']\n",
+    "    'Frank Vogel'\n",
+    "    >>> len(lakers_coaches_players['assistantCoaches'])\n",
+    "    6\n",
+    "    >>> len(lakers_coaches_players['players'])\n",
     "    17\n",
-    "    >>> nets_coaches_players['assistantCoaches'][1]\n",
-    "    \"Mike D'Antoni\"\n",
-    "    >>> nets_coaches_players['players'][0]\n",
-    "    'LaMarcus Aldridge'\n",
+    "    >>> lakers_coaches_players['assistantCoaches'][0]\n",
+    "    'Jason Kidd'\n",
+    "    >>> lakers_coaches_players['players'][0]\n",
+    "    'Kostas Antetokounmpo'\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
     "    \n",
@@ -257,53 +278,53 @@
      "output_type": "stream",
      "text": [
       "test_00_extract_all_coaches (__main__.TestMidterm) ... FAIL\n",
-      "test_01_extract_head_coaches (__main__.TestMidterm) ... FAIL\n",
-      "test_02_find_tallest_shortest_players (__main__.TestMidterm) ... FAIL\n",
-      "test_03_find_lakers_nets_players (__main__.TestMidterm) ... FAIL\n",
-      "test_04_find_nets_coaches_players (__main__.TestMidterm) ... FAIL\n",
+      "test_01_extract_assistant_coaches (__main__.TestMidterm) ... FAIL\n",
+      "test_02_find_heaviest_lightest_players (__main__.TestMidterm) ... FAIL\n",
+      "test_03_find_nuggets_sixers_players (__main__.TestMidterm) ... FAIL\n",
+      "test_04_find_lakers_coaches_players (__main__.TestMidterm) ... FAIL\n",
       "\n",
       "======================================================================\n",
       "FAIL: test_00_extract_all_coaches (__main__.TestMidterm)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-2848a8e165a2>\", line 4, in test_00_extract_all_coaches\n",
+      "  File \"<ipython-input-7-a7a82e87e138>\", line 4, in test_00_extract_all_coaches\n",
       "    self.assertIsInstance(all_coaches, list)\n",
       "AssertionError: None is not an instance of <class 'list'>\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_01_extract_head_coaches (__main__.TestMidterm)\n",
+      "FAIL: test_01_extract_assistant_coaches (__main__.TestMidterm)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-2848a8e165a2>\", line 12, in test_01_extract_head_coaches\n",
-      "    self.assertIsInstance(head_coaches, dict)\n",
+      "  File \"<ipython-input-7-a7a82e87e138>\", line 12, in test_01_extract_assistant_coaches\n",
+      "    self.assertIsInstance(assistant_coaches, dict)\n",
       "AssertionError: None is not an instance of <class 'dict'>\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_02_find_tallest_shortest_players (__main__.TestMidterm)\n",
+      "FAIL: test_02_find_heaviest_lightest_players (__main__.TestMidterm)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-2848a8e165a2>\", line 20, in test_02_find_tallest_shortest_players\n",
-      "    self.assertIsInstance(tallest_shortest_players, dict)\n",
+      "  File \"<ipython-input-7-a7a82e87e138>\", line 19, in test_02_find_heaviest_lightest_players\n",
+      "    self.assertIsInstance(heaviest_lightest_players, dict)\n",
       "AssertionError: None is not an instance of <class 'dict'>\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_03_find_lakers_nets_players (__main__.TestMidterm)\n",
+      "FAIL: test_03_find_nuggets_sixers_players (__main__.TestMidterm)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-2848a8e165a2>\", line 28, in test_03_find_lakers_nets_players\n",
-      "    self.assertIsInstance(lakers_nets_players, dict)\n",
+      "  File \"<ipython-input-7-a7a82e87e138>\", line 27, in test_03_find_nuggets_sixers_players\n",
+      "    self.assertIsInstance(nuggets_sixers_players, dict)\n",
       "AssertionError: None is not an instance of <class 'dict'>\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_04_find_nets_coaches_players (__main__.TestMidterm)\n",
+      "FAIL: test_04_find_lakers_coaches_players (__main__.TestMidterm)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-2848a8e165a2>\", line 40, in test_04_find_nets_coaches_players\n",
-      "    self.assertIsInstance(nets_coaches_players, dict)\n",
+      "  File \"<ipython-input-7-a7a82e87e138>\", line 39, in test_04_find_lakers_coaches_players\n",
+      "    self.assertIsInstance(lakers_coaches_players, dict)\n",
       "AssertionError: None is not an instance of <class 'dict'>\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 5 tests in 0.016s\n",
+      "Ran 5 tests in 0.023s\n",
       "\n",
       "FAILED (failures=5)\n"
      ]
@@ -319,42 +340,41 @@
     "        self.assertEqual(len(all_coaches), 240)\n",
     "        self.assertEqual(len(all_coaches[0]), 4)\n",
     "        self.assertEqual(len(all_coaches[-1]), 4)\n",
-    "    def test_01_extract_head_coaches(self):\n",
-    "        head_coaches = extract_head_coaches('coaches.json')\n",
-    "        self.assertIsInstance(head_coaches, dict)\n",
-    "        self.assertEqual(len(head_coaches), 30)\n",
-    "        self.assertEqual(head_coaches['PHI'], 'Doc Rivers')\n",
-    "        self.assertEqual(head_coaches['BKN'], 'Steve Nash')\n",
-    "        self.assertEqual(head_coaches['SAS'], 'Gregg Popovich')\n",
-    "        self.assertEqual(head_coaches['GSW'], 'Steve Kerr')\n",
-    "    def test_02_find_tallest_shortest_players(self):\n",
-    "        tallest_shortest_players = find_tallest_shortest_players('players.json')\n",
-    "        self.assertIsInstance(tallest_shortest_players, dict)\n",
-    "        self.assertEqual(tallest_shortest_players['tallest']['heightMeters'], 2.26)\n",
-    "        self.assertEqual(tallest_shortest_players['shortest']['heightMeters'], 1.78)\n",
-    "        tallest_players = tallest_shortest_players['tallest']['players']\n",
-    "        self.assertTrue('Tacko Fall' in tallest_players)\n",
-    "        self.assertEqual(len(tallest_shortest_players['shortest']['players']), 4)\n",
-    "    def test_03_find_lakers_nets_players(self):\n",
-    "        lakers_nets_players = find_lakers_nets_players('players.json', 'teams.json')\n",
-    "        self.assertIsInstance(lakers_nets_players, dict)\n",
-    "        self.assertEqual(len(lakers_nets_players['Los Angeles Lakers']), 17)\n",
-    "        self.assertEqual(len(lakers_nets_players['Brooklyn Nets']), 17)\n",
-    "        lakers_players = lakers_nets_players['Los Angeles Lakers']\n",
-    "        self.assertTrue('LeBron James' in lakers_players)\n",
-    "        self.assertTrue('Anthony Davis' in lakers_players)\n",
-    "        nets_players = lakers_nets_players['Brooklyn Nets']\n",
-    "        self.assertTrue('Kevin Durant' in nets_players)\n",
-    "        self.assertTrue('Kyrie Irving' in nets_players)\n",
-    "        self.assertTrue('James Harden' in nets_players)\n",
-    "    def test_04_find_nets_coaches_players(self):\n",
-    "        nets_coaches_players = find_nets_coaches_players('coaches.json', 'players.json', 'teams.json')\n",
-    "        self.assertIsInstance(nets_coaches_players, dict)\n",
-    "        self.assertEqual(nets_coaches_players['headCoach'], 'Steve Nash')\n",
-    "        self.assertTrue('Mike D\\'Antoni' in nets_coaches_players['assistantCoaches'])\n",
-    "        self.assertTrue('Kevin Durant' in nets_coaches_players['players'])\n",
-    "        self.assertTrue('Kyrie Irving' in nets_coaches_players['players'])\n",
-    "        self.assertTrue('James Harden' in nets_coaches_players['players'])\n",
+    "    def test_01_extract_assistant_coaches(self):\n",
+    "        assistant_coaches = extract_assistant_coaches('coaches.json')\n",
+    "        self.assertIsInstance(assistant_coaches, dict)\n",
+    "        self.assertEqual(len(assistant_coaches), 30)\n",
+    "        self.assertTrue('Sam Cassell' in assistant_coaches['PHI'])\n",
+    "        self.assertTrue(\"Mike D'Antoni\" in assistant_coaches['BKN'])\n",
+    "        self.assertTrue('Darius Songaila' in assistant_coaches['SAS'])\n",
+    "    def test_02_find_heaviest_lightest_players(self):\n",
+    "        heaviest_lightest_players = find_heaviest_lightest_players('players.json')\n",
+    "        self.assertIsInstance(heaviest_lightest_players, dict)\n",
+    "        self.assertEqual(heaviest_lightest_players['heaviest']['weightKilograms'], 141.1)\n",
+    "        self.assertEqual(heaviest_lightest_players['lightest']['weightKilograms'], 72.6)\n",
+    "        tallest_players = heaviest_lightest_players['heaviest']['players']\n",
+    "        self.assertTrue('Tacko Fall' in heaviest_lightest_players['heaviest']['players'])\n",
+    "        self.assertTrue('Tyrell Terry' in heaviest_lightest_players['lightest']['players'])\n",
+    "    def test_03_find_nuggets_sixers_players(self):\n",
+    "        nuggets_sixers_players = find_nuggets_sixers_players('players.json', 'teams.json')\n",
+    "        self.assertIsInstance(nuggets_sixers_players, dict)\n",
+    "        self.assertEqual(len(nuggets_sixers_players['Denver Nuggets']), 17)\n",
+    "        self.assertEqual(len(nuggets_sixers_players['Philadelphia 76ers']), 17)\n",
+    "        nuggets_players = nuggets_sixers_players['Denver Nuggets']\n",
+    "        self.assertTrue('Nikola Jokic' in nuggets_players)\n",
+    "        self.assertTrue('Jamal Murray' in nuggets_players)\n",
+    "        sixers_players = nuggets_sixers_players['Philadelphia 76ers']\n",
+    "        self.assertTrue('Joel Embiid' in sixers_players)\n",
+    "        self.assertTrue('Ben Simmons' in sixers_players)\n",
+    "        self.assertTrue('Tobias Harris' in sixers_players)\n",
+    "    def test_04_find_lakers_coaches_players(self):\n",
+    "        lakers_coaches_players = find_lakers_coaches_players('coaches.json', 'players.json', 'teams.json')\n",
+    "        self.assertIsInstance(lakers_coaches_players, dict)\n",
+    "        self.assertEqual(lakers_coaches_players['headCoach'], 'Frank Vogel')\n",
+    "        self.assertTrue('Jason Kidd' in lakers_coaches_players['assistantCoaches'])\n",
+    "        self.assertEqual(len(lakers_coaches_players['players']), 17)\n",
+    "        self.assertTrue('LeBron James' in lakers_coaches_players['players'])\n",
+    "        self.assertTrue('Anthony Davis' in lakers_coaches_players['players'])\n",
     "        \n",
     "suite = unittest.TestLoader().loadTestsFromTestCase(TestMidterm)\n",
     "runner = unittest.TextTestRunner(verbosity=2)\n",
