add expected outputs

--- a/midterm.ipynb
+++ b/midterm.ipynb
@@ -52,7 +52,21 @@
     "## 00. Define a function named `extract_all_coaches` that is able to extract the essential information of all coaches including head coaches and assistant coaches from `coaches.json`.\n",
     "\n",
     "- Expected inputs: a file `coaches.json`.\n",
-    "- Expected outputs: a list."
+    "- Expected outputs: a list.\n",
+    "\n",
+    "```\n",
+    "[\n",
+    "    {'firstName': 'Doc',\n",
+    "     'lastName': 'Rivers',\n",
+    "     'isAssistant': False,\n",
+    "     'teamTricode': 'PHI'},\n",
+    "     ...,\n",
+    "    {'firstName': 'Mike',\n",
+    "     'lastName': 'Terpstra',\n",
+    "     'isAssistant': True,\n",
+    "     'teamTricode': 'WAS'}\n",
+    "]\n",
+    "```"
    ]
   },
   {
@@ -80,7 +94,19 @@
     "     'teamTricode': 'WAS'}\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "    \n",
+    "    with open(coaches_json) as json_file:\n",
+    "        coaches = json.load(json_file)\n",
+    "    coach_list = coaches['league']['standard']\n",
+    "    out = []\n",
+    "    for coach in coach_list:\n",
+    "        coach_dict = {\n",
+    "            'firstName': coach['firstName'],\n",
+    "            'lastName': coach['lastName'],\n",
+    "            'isAssistant': coach['isAssistant'],\n",
+    "            'teamTricode': coach['teamSitesOnly']['teamTricode']\n",
+    "        }\n",
+    "        out.append(coach_dict)\n",
+    "    return out\n",
     "    ### END SOLUTION"
    ]
   },
@@ -91,7 +117,16 @@
     "## 01. Define a function named `extract_assistant_coaches` that is able to extract head coaches from `coaches.json`.\n",
     "\n",
     "- Expected inputs: a file `coaches.json`.\n",
-    "- Expected outputs: a dictionary."
+    "- Expected outputs: a dictionary.\n",
+    "\n",
+    "```\n",
+    "{\n",
+    "    'PHI': [assistant_coaches, ...],\n",
+    "    'BKN': [assistant_coaches, ...],\n",
+    "    'SAS': [assistant_coaches, ...],\n",
+    "    ...\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -136,7 +171,19 @@
     "     'Will Sevening']\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "    \n",
+    "    all_coaches = extract_all_coaches(coaches_json)\n",
+    "    out = {}\n",
+    "    for coach in all_coaches:\n",
+    "        if coach['isAssistant']:\n",
+    "            team_tricode = coach['teamTricode']\n",
+    "            first_name = coach['firstName']\n",
+    "            last_name = coach['lastName']\n",
+    "            full_name = \"{} {}\".format(first_name, last_name)\n",
+    "            if team_tricode in out.keys():\n",
+    "                out[team_tricode].append(full_name)\n",
+    "            else:\n",
+    "                out[team_tricode] = [full_name]\n",
+    "    return out\n",
     "    ### END SOLUTION"
    ]
   },
@@ -149,7 +196,16 @@
     "PS Skip those players whose `weightKilograms` is an empty string.\n",
     "\n",
     "- Expected inputs: a file `players.json`.\n",
-    "- Expected outputs: a dictionary."
+    "- Expected outputs: a dictionary.\n",
+    "\n",
+    "```\n",
+    "{\n",
+    "    'heaviest': {'weightKilograms': max_weight_kilograms,\n",
+    "                'players': [heaviest_players, ...]},\n",
+    "    'lightest': {'weightKilograms': min_weight_kilograms,\n",
+    "                 'players': [lightest_players, ...]}\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -173,7 +229,33 @@
     "    ['Tyrell Terry']\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "    \n",
+    "    with open(players_json) as json_file:\n",
+    "        players = json.load(json_file)\n",
+    "    players_list = players['league']['standard']\n",
+    "    weight_kilograms_list = []\n",
+    "    for player in players_list:\n",
+    "        weight_kilograms = player['weightKilograms']\n",
+    "        if len(weight_kilograms) > 0:\n",
+    "            weight_kilograms_list.append(float(weight_kilograms))\n",
+    "    max_weight_kilograms, min_weight_kilograms = max(weight_kilograms_list), min(weight_kilograms_list)\n",
+    "    out = {\n",
+    "        'heaviest': {\n",
+    "            'weightKilograms': max_weight_kilograms,\n",
+    "            'players': []\n",
+    "        },\n",
+    "        'lightest': {\n",
+    "            'weightKilograms': min_weight_kilograms,\n",
+    "            'players': []\n",
+    "        }\n",
+    "    }\n",
+    "    for player in players_list:\n",
+    "        if player['weightKilograms'] == str(max_weight_kilograms):\n",
+    "            player_full_name = \"{} {}\".format(player['firstName'], player['lastName'])\n",
+    "            out['heaviest']['players'].append(player_full_name)\n",
+    "        elif player['weightKilograms'] == str(min_weight_kilograms):\n",
+    "            player_full_name = \"{} {}\".format(player['firstName'], player['lastName'])\n",
+    "            out['lightest']['players'].append(player_full_name)\n",
+    "    return out\n",
     "    ### END SOLUTION"
    ]
   },
@@ -184,7 +266,14 @@
     "## 03. Define a function named `find_nuggets_sixers_players`  that is able to find the players who played for the Denver Nuggets and the Philadelphia 76ers from `players.json` and `teams.json`.\n",
     "\n",
     "- Expected inputs: two files `players.json` and `teams.json`.\n",
-    "- Expected outputs: a dictionary."
+    "- Expected outputs: a dictionary.\n",
+    "\n",
+    "```\n",
+    "{\n",
+    "    'Denver Nuggets': ['Will Barton', ...],\n",
+    "    'Philadelphia 76ers': ['Seth Curry', ...]\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -212,7 +301,29 @@
     "    'Joel Embiid'\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "    \n",
+    "    with open(players_json) as json_file:\n",
+    "        players = json.load(json_file)\n",
+    "    with open(teams_json) as json_file:\n",
+    "        teams = json.load(json_file)\n",
+    "    players_list = players['league']['standard']\n",
+    "    teams_list = teams['league']['standard']\n",
+    "    for team in teams_list:\n",
+    "        if team['nickname'] == 'Nuggets':\n",
+    "            nuggets_team_id = team['teamId']\n",
+    "        elif team['nickname'] == '76ers':\n",
+    "            sixers_team_id = team['teamId']\n",
+    "    out = {\n",
+    "        'Denver Nuggets': [],\n",
+    "        'Philadelphia 76ers': []\n",
+    "    }\n",
+    "    for player in players_list:\n",
+    "        team_id = player['teamId']\n",
+    "        player_name = \"{} {}\".format(player['firstName'], player['lastName'])\n",
+    "        if team_id == nuggets_team_id:\n",
+    "            out['Denver Nuggets'].append(player_name)\n",
+    "        elif team_id == sixers_team_id:\n",
+    "            out['Philadelphia 76ers'].append(player_name)\n",
+    "    return out\n",
     "    ### END SOLUTION"
    ]
   },
@@ -223,7 +334,15 @@
     "## 04. Define a function named `find_lakers_coaches_players`  that is able to find the coaches and players of the Los Angeles Lakers from `coaches.json`, `players.json`, and `teams.json`.\n",
     "\n",
     "- Expected inputs: three files `coaches.json`, `players.json`, and `teams.json`.\n",
-    "- Expected outputs: a dictionary."
+    "- Expected outputs: a dictionary.\n",
+    "\n",
+    "```\n",
+    "{\n",
+    "    'headCoach': head_coach,\n",
+    "    'assistantCoaches': [assistant_coaches, ...],\n",
+    "    'players': [players, ...]\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -249,7 +368,38 @@
     "    'Kostas Antetokounmpo'\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "    \n",
+    "    with open(players_json) as json_file:\n",
+    "        players = json.load(json_file)\n",
+    "    with open(teams_json) as json_file:\n",
+    "        teams = json.load(json_file)\n",
+    "    with open(coaches_json) as json_file:\n",
+    "        coaches = json.load(json_file)\n",
+    "    players_list = players['league']['standard']\n",
+    "    teams_list = teams['league']['standard']\n",
+    "    coaches_list = coaches['league']['standard']\n",
+    "    for team in teams_list:\n",
+    "        if team['nickname'] == 'Lakers':\n",
+    "            lakers_team_id = team['teamId']\n",
+    "    out = {\n",
+    "        'headCoach': None,\n",
+    "        'assistantCoaches': [],\n",
+    "        'players': []\n",
+    "    }\n",
+    "    for coach in coaches_list:\n",
+    "        first_name = coach['firstName']\n",
+    "        last_name = coach['lastName']\n",
+    "        full_name = \"{} {}\".format(first_name, last_name)\n",
+    "        if (coach['teamId'] == lakers_team_id) and (not coach['isAssistant']):\n",
+    "            out['headCoach'] = full_name\n",
+    "        elif (coach['teamId'] == lakers_team_id) and coach['isAssistant']:\n",
+    "            out['assistantCoaches'].append(full_name)\n",
+    "    for player in players_list:\n",
+    "        first_name = player['firstName']\n",
+    "        last_name = player['lastName']\n",
+    "        full_name = \"{} {}\".format(first_name, last_name)\n",
+    "        if player['teamId'] == lakers_team_id:\n",
+    "            out['players'].append(full_name)\n",
+    "    return out\n",
     "    ### END SOLUTION"
    ]
   },
@@ -277,56 +427,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "test_00_extract_all_coaches (__main__.TestMidterm) ... FAIL\n",
-      "test_01_extract_assistant_coaches (__main__.TestMidterm) ... FAIL\n",
-      "test_02_find_heaviest_lightest_players (__main__.TestMidterm) ... FAIL\n",
-      "test_03_find_nuggets_sixers_players (__main__.TestMidterm) ... FAIL\n",
-      "test_04_find_lakers_coaches_players (__main__.TestMidterm) ... FAIL\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_00_extract_all_coaches (__main__.TestMidterm)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-a7a82e87e138>\", line 4, in test_00_extract_all_coaches\n",
-      "    self.assertIsInstance(all_coaches, list)\n",
-      "AssertionError: None is not an instance of <class 'list'>\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_01_extract_assistant_coaches (__main__.TestMidterm)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-a7a82e87e138>\", line 12, in test_01_extract_assistant_coaches\n",
-      "    self.assertIsInstance(assistant_coaches, dict)\n",
-      "AssertionError: None is not an instance of <class 'dict'>\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_02_find_heaviest_lightest_players (__main__.TestMidterm)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-a7a82e87e138>\", line 19, in test_02_find_heaviest_lightest_players\n",
-      "    self.assertIsInstance(heaviest_lightest_players, dict)\n",
-      "AssertionError: None is not an instance of <class 'dict'>\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_03_find_nuggets_sixers_players (__main__.TestMidterm)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-a7a82e87e138>\", line 27, in test_03_find_nuggets_sixers_players\n",
-      "    self.assertIsInstance(nuggets_sixers_players, dict)\n",
-      "AssertionError: None is not an instance of <class 'dict'>\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_04_find_lakers_coaches_players (__main__.TestMidterm)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-a7a82e87e138>\", line 39, in test_04_find_lakers_coaches_players\n",
-      "    self.assertIsInstance(lakers_coaches_players, dict)\n",
-      "AssertionError: None is not an instance of <class 'dict'>\n",
+      "test_00_extract_all_coaches (__main__.TestMidterm) ... ok\n",
+      "test_01_extract_assistant_coaches (__main__.TestMidterm) ... ok\n",
+      "test_02_find_heaviest_lightest_players (__main__.TestMidterm) ... ok\n",
+      "test_03_find_nuggets_sixers_players (__main__.TestMidterm) ... ok\n",
+      "test_04_find_lakers_coaches_players (__main__.TestMidterm) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 5 tests in 0.023s\n",
+      "Ran 5 tests in 0.046s\n",
       "\n",
-      "FAILED (failures=5)\n"
+      "OK\n"
      ]
     }
    ],
@@ -397,7 +507,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You've got 0 points among 5 questions.\n"
+      "You've got 15 points among 5 questions.\n"
      ]
     }
    ],
