update question description

--- a/midterm.ipynb
+++ b/midterm.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 03. Define a function named `find_nuggets_sixers_players`  that is able to find the players who played for the Denver Nuggets and the Philadelphia 76ers from `players.json` and `teams.json`.\n",
+    "## 03. Define a function named `find_nuggets_sixers_players`  that is able to find the players who are currently playing for the Denver Nuggets and the Philadelphia 76ers from `players.json` and `teams.json`.\n",
     "\n",
     "- Expected inputs: two files `players.json` and `teams.json`.\n",
     "- Expected outputs: a dictionary.\n",
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 04. Define a function named `find_lakers_coaches_players`  that is able to find the coaches and players of the Los Angeles Lakers from `coaches.json`, `players.json`, and `teams.json`.\n",
+    "## 04. Define a function named `find_lakers_coaches_players`  that is able to find the coaches and current players of the Los Angeles Lakers from `coaches.json`, `players.json`, and `teams.json`.\n",
     "\n",
     "- Expected inputs: three files `coaches.json`, `players.json`, and `teams.json`.\n",
     "- Expected outputs: a dictionary.\n",
@@ -371,7 +371,7 @@
       "AssertionError: None is not an instance of <class 'dict'>\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 5 tests in 0.016s\n",
+      "Ran 5 tests in 0.019s\n",
       "\n",
       "FAILED (failures=5)\n"
      ]
